# MihoyoStarter

./: Cargo.toml  README.md
docs/: mihoyo.md
